Add "connections" and credentials management

--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -23,3 +23,6 @@ serde = { version = "1.0", features = ["derive"] }
 log = "0.4"
 tauri = { version = "2.8.5", features = [] }
 tauri-plugin-log = "2"
+secrecy = "0.10.3"
+keyring = { version = "3", features = ["apple-native", "windows-native"] }
+uuid = { version = "1", features = ["v4", "fast-rng"] }
