--- a/package.json
+++ b/package.json
@@ -11,20 +11,27 @@
   },
   "dependencies": {
     "@nuxtjs/color-mode": "^3.5.2",
+    "@pinia/nuxt": "^0.11.2",
     "@tailwindcss/vite": "^4.1.13",
+    "@tauri-apps/api": "^2.8.0",
+    "@vee-validate/zod": "^4.15.1",
     "@vueuse/core": "^13.9.0",
     "@vueuse/nuxt": "^13.9.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "lucide-vue-next": "^0.544.0",
     "nuxt": "^4.1.1",
+    "pinia": "^3.0.3",
     "reka-ui": "^2.5.0",
     "shadcn-nuxt": "^2.2.0",
     "tailwind-merge": "^3.3.1",
     "tailwindcss": "^4.1.13",
     "tw-animate-css": "^1.3.8",
+    "vee-validate": "^4.15.1",
     "vue": "^3.5.21",
-    "vue-router": "^4.5.1"
+    "vue-router": "^4.5.1",
+    "vue-sonner": "^2.0.8",
+    "zod": "^3.25.76"
   },
   "devDependencies": {
     "@tauri-apps/cli": "^2.8.4",
